# demo-shop

./: .aiignore  .gitignore  AGENTS.md  README.md
docs/: App.md  FrondendService.md  TransactionService.md  WebSite.md
docs/human/: Notes.md  TestAgents.md
scripts/: build-all.sh  db-clean.sh  db-funcs.sh  db-load-examples.sh  db-migrate.sh  db-shell.sh  generate.sh
src/: buf.gen.yaml  buf.yaml
src/apis/graphql/: admin.graphql  customer.graphql  types.graphql
src/db/examples/: 001_example_products.sql  README.md
src/db/migrations/: 001_initial_schema.sql  002_add_customer_info_to_orders.sql
src/go/: .gitignore  go.mod  go.sum
src/transaction/: .gitignore  go.mod  main.go
src/ts/web/: README.md  admin.html  codegen.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
test/docs/api/: README.md  (+10 more)
test/spec/api/: .env.example  .gitignore  README.md  config.py  conftest.py  gen-proto.sh  pyproject.toml  validate.py
test/spec/api/proto/demoshop/v1/: transaction_pb2.py  transaction_pb2.pyi  transaction_pb2_grpc.py
test/spec/api/tests/graphql/: __init__.py
test/spec/api/tests/graphql/admin/: __init__.py  test_order_management.py  test_product_crud.py  test_query_products_filters.py
test/spec/api/tests/graphql/customer/: __init__.py  test_cart_operations.py  test_place_order.py  test_query_products.py  test_query_single_product.py
test/spec/api/tests/grpc/: __init__.py  test_cart_service.py  test_inventory_service.py  test_order_service.py
test/spec/api/utils/: __init__.py  graphql_client.py  grpc_client.py  helpers.py
(+74 files in other folders)
